plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromExpectedPrimaryConstructor/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in jvm module'")!>NoConstructor2<!> {
    fun <!LINE_MARKER("descr='Has actuals in jvm module'")!>extraFun<!>()
}
